# datacentre_planning

./: .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  DATA-LICENSING.md  LICENSE  NOTICE  NOTICE-DATA.md  POST_PUBLICATION_CHECKLIST.md  README.md  ROADMAP.md  docker-compose.yml  index.html  prior_art.md  pyproject.toml  scrape.py
.github/workflows/: pages.yml
data/: operators.yaml  seed_applications.md
data/colocated_energy_spike/: 01_cambois_radius_1.0km.json  02_elsham_tech_radius_1.0km.json  03_humber_tech_radius_1.0km.json  04_thurrock_google_radius_1.0km.json  07_gpark_docklands_radius_1.0km.json  09_court_lane_iver_radius_1.0km.json  10_yorkshire_ep_radius_1.0km.json  findings.md
data/nsip_research/: findings.md  (+1 more)
dcp/: __init__.py  cli.py  cohorts.py  corpus_stats.py  db.py  export.py  extract.py  findings.py  llm.py  map.py  reader.py  release.py  repo.py  triage.py  worklist.py
dcp/sources/: idox.py  (+5 more)
migrations/: 001_initial.sql  002_discovery_tracking.sql  003_triage_columns.sql  004_council_aliases.sql
scripts/: backfill_council_gss.py  corpus_stats.py  eval_triage.py  extract_findings.py  fetch_osm_power_plants.py  finalize_idox_manifests.py  ingest_manual_docs.py  load_council_aliases.py  map_spot_check.py  refresh_pages_index.sh  retry_idox_errors.py  tag_cohorts.py  tag_duplicates.py  tag_priors.py  verify_findings.py  worklist_preview.py
tests/: conftest.py  test_backfill.py  test_council_reorg.py  test_export.py  test_idox.py  test_map.py  test_nsip.py  test_planit.py  test_repo.py  test_run_triage.py  test_smoke.py  test_triage.py
(+46 files in other folders)
